Bug 276391 - Desktop zoom shows wrong mousecursor while resizing window
Summary: Desktop zoom shows wrong mousecursor while resizing window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-24 15:22 UTC by Christian H
Modified: 2012-11-29 19:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian H 2011-06-24 15:22:58 UTC
Version:           unspecified
OS:                Linux

Hi all,
if i turn the desktop zoom on and i wanna resize a window (with mouse on the right;bottom edge) the cursoricon wont change to "resizecursor".
Greetings

Reproducible: Always

Steps to Reproduce:
turn Desktopzoom on.
Try to change the Size of the window with the mouse

Actual Results:  
the mouscursor wont change to the "size change cursor".

Expected Results:  
It should shot the Resize cursor icon i.e. Arrowicon
Comment 1 Travis Evans 2012-11-22 10:24:18 UTC
I see this in KDE 4.9.3. The mouse cursor never seems to change while zoomed in. Additionally, the mouse cursor shrinks (instead of using the Size 48 I selected in the cursor theme settings, regardless of how I set the mouse cursor option in the Zoom desktop effects configuration), and it becomes completely invisible after triggering a Plasma panel popup until I zoom back to full. Perhaps these are all related?
Comment 2 Travis Evans 2012-11-22 10:38:30 UTC
The disappearing cursor in my case appears to be Bug289336. The other cursor issues I mentioned in the previous comment appear to be a separate issue, though.
Comment 3 Thomas Lübking 2012-11-22 11:05:29 UTC
Please notice that this can and will not work unless you configure the zoom effect to
a) "keep" the pointer
b) use "proportional" scaling

Doesn't work in that case either, though (hide cursor should catch that configuration)


Loading the "wrong" cursor image in the scaled pointer mode is a much unrelated issue, please file another bug.
Comment 4 Travis Evans 2012-11-22 12:38:44 UTC
New bug filed as Bug310497
Comment 5 Thomas Lübking 2012-11-22 19:20:58 UTC
https://git.reviewboard.kde.org/r/107424/
Comment 6 Thomas Lübking 2012-11-29 19:37:00 UTC
Git commit 19750d2405602553f573295a2a400be669e71453 by Thomas Lübking.
Committed on 22/11/2012 at 19:26.
Pushed by luebking into branch 'master'.

don't use textured mousecursor unless required

REVIEW: 107424
FIXED-IN: 4.10

M  +2    -0    kwin/effects/zoom/zoom.cpp

http://commits.kde.org/kde-workspace/19750d2405602553f573295a2a400be669e71453
Comment 7 Thomas Lübking 2012-11-29 19:58:38 UTC
Git commit 38431db07ca0cec8fdbd2f193ced4805a9443566 by Thomas Lübking.
Committed on 22/11/2012 at 19:26.
Pushed by luebking into branch 'KDE/4.9'.

don't use textured mousecursor unless required

REVIEW: 107424
FIXED-IN: 4.9.4
(cherry picked from commit 19750d2405602553f573295a2a400be669e71453)

M  +2    -0    kwin/effects/zoom/zoom.cpp

http://commits.kde.org/kde-workspace/38431db07ca0cec8fdbd2f193ced4805a9443566