don't use textured mousecursor unless required

REVIEW: 107424
BUG: 276391
FIXED-IN: 4.9.4
(cherry picked from commit 19750d2405602553f573295a2a400be669e71453)